# sct_description

./: CMakeLists.txt  package.xml
launch/: display_scout_mini.launch  gazebo.launch
meshes/common/: ouster_lidar.stl
meshes/scout/: base_link.stl  upper_shell.stl
urdf/common/: VLP-16.urdf.xacro  imu.urdf.xacro  location.urdf.xacro  os1_64.urdf.xacro  ouster_lidar.urdf.xacro  radar.urdf.xacro  sct_mini_wheel.urdf.xacro  wheel.urdf.xacro
urdf/scout/: chassis.urdf.xacro  scout_mini.urdf.xacro
