<?xml version="1.0"?>
<package format="2">
    <name>sct_description</name>
    <version>0.0.0</version>
    <description>The sct_description package</description>

    <maintainer email="myx@todo.todo">myx</maintainer>
    <license>TODO</license>


    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>xacro</exec_depend>
    
</package>
